--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,19 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+    <color name="red">#EA0000</color>
+    <color name="grey">#555555</color>
+    <color name="bright_green">#4BED28</color>
+    <color name="green">#054A2A</color>
+    <color name="light_purple">#C493F4</color>
+    <color name="light_purple2">#ECDCFB</color>
+    <color name="dark_grey">#5C5C5C</color>
+    <color name="light_grey">#8A8A8A</color>
+    <color name="light_light_grey">#E3E3E3</color>
+    <color name="light_green">#E5FBE0</color>
 </resources>
