--- a/app/src/main/res/layout/activity_invoices_page.xml
+++ b/app/src/main/res/layout/activity_invoices_page.xml
@@ -1,10 +1,154 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fontFamily="sans-serif-thin"
     tools:context=".ui.activity.InvoicesPage">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appbar"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:background="@color/light_green">
+
+            <androidx.appcompat.widget.Toolbar
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                app:layout_scrollFlags="scroll|enterAlways">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="25dp"
+                    android:orientation="horizontal">
+
+                    <EditText
+                        android:id="@+id/searchField"
+                        android:layout_width="200dp"
+                        android:layout_height="50dp"
+                        android:background="@color/white"
+                        android:textAlignment="center"
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:orientation="vertical">
+
+                        <ImageButton
+                            android:id="@+id/searchButton"
+                            android:layout_width="60dp"
+                            android:layout_height="30dp"
+                            android:background="@color/white"
+                            android:clickable="true"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/search" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="25dp"
+                            android:layout_gravity="center_horizontal"
+                            android:background="@color/white"
+                            android:gravity="center_horizontal"
+                            android:text="Search"
+                            android:textColor="@color/black"
+                            android:textSize="13sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="5dp"
+                        android:orientation="vertical">
+
+                        <ImageButton
+                            android:id="@+id/resetButton"
+                            android:layout_width="60dp"
+                            android:layout_height="30dp"
+                            android:background="@color/white"
+                            android:clickable="true"
+                            android:contentDescription="@string/msg14"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/undo" />
+
+                        <TextView
+                            android:layout_width="60dp"
+                            android:layout_height="25dp"
+                            android:layout_gravity="center_horizontal"
+                            android:background="@color/white"
+                            android:gravity="center_horizontal"
+                            android:text="Reset"
+                            android:textColor="@color/black"
+                            android:textSize="13sp" />
+                    </LinearLayout>
+
+                </LinearLayout>
+            </androidx.appcompat.widget.Toolbar>
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabs"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
+            app:tabGravity="center"
+            app:tabMode="scrollable">
+
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/all"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="All" />
+
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/notSignedByPark"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Not signed by parking manager" />
+
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/notSignedByTruck"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Not signed by truck manager" />
+
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/signed"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Signed" />
+        </com.google.android.material.tabs.TabLayout>
+
+
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:isScrollContainer="true"
+                android:scrollbarAlwaysDrawHorizontalTrack="true"
+                android:scrollbarAlwaysDrawVerticalTrack="true">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycle_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp" />
+            </RelativeLayout>
+        </androidx.core.widget.NestedScrollView>
+    </LinearLayout>
+
+</FrameLayout>
