--- a/app/src/main/res/layout/activity_truck_page.xml
+++ b/app/src/main/res/layout/activity_truck_page.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fontFamily="sans-serif-thin"
     android:orientation="vertical"
-    tools:context=".ui.activity.TruckPage">
+    tools:context=".ui.activity.truck.TruckPage">
 
     <TextView
         android:id="@+id/text"
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="70dp"
-        android:text="Truck"
+        android:text="@string/msg41"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="23sp"
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="Number"
+        android:text="@string/msg42"
         android:textAlignment="center"
         android:textColor="@color/green"
         android:textSize="17sp" />
@@ -35,7 +35,7 @@
         android:layout_height="20dp"
         android:layout_marginTop="50dp"
         android:background="@color/light_green"
-        android:orientation="vertical"></LinearLayout>
+        android:orientation="vertical" />
 
     <TextView
         android:id="@+id/width"
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
-        android:text="Width"
+        android:text="@string/msg43"
         android:textColor="@color/black"
         android:textSize="15sp" />
 
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
-        android:text="Length"
+        android:text="@string/msg44"
         android:textColor="@color/black"
         android:textSize="15sp" />
 
@@ -63,7 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
-        android:text="Height"
+        android:text="@string/msg45"
         android:textColor="@color/black"
         android:textSize="15sp" />
 
@@ -73,7 +73,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
-        android:text="Weight"
+        android:text="@string/msg46"
         android:textColor="@color/black"
         android:textSize="15sp" />
 
@@ -84,9 +84,8 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="85dp"
         android:backgroundTint="@color/green"
-        android:text="Edit"
+        android:text="@string/msg47"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="20dp" />
-
+        android:textSize="20sp" />
 </LinearLayout>
