--- a/app/src/main/res/layout/activity_trucks_page.xml
+++ b/app/src/main/res/layout/activity_trucks_page.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fontFamily="sans-serif-thin"
-    tools:context=".ui.activity.TrucksPage">
+    tools:context=".ui.activity.truck.TrucksPage">
 
     <LinearLayout
         android:layout_width="match_parent"
