--- a/app/src/main/res/layout/activity_invoice_page.xml
+++ b/app/src/main/res/layout/activity_invoice_page.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fontFamily="sans-serif-thin"
     android:orientation="vertical"
-    tools:context=".ui.activity.InvoicePage">
+    tools:context=".ui.activity.invoice.InvoicePage">
 
     <TextView
         android:id="@+id/text"
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="70dp"
-        android:text="Invoice"
+        android:text="@string/msg20"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="23sp"
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="Date"
+        android:text="@string/msg21"
         android:textAlignment="center"
         android:textColor="@color/green"
         android:textSize="17sp" />
@@ -35,7 +35,7 @@
         android:layout_height="20dp"
         android:layout_marginTop="50dp"
         android:background="@color/light_green"
-        android:orientation="vertical"></LinearLayout>
+        android:orientation="vertical" />
 
     <TextView
         android:id="@+id/truckNumber"
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
-        android:text="Truck number"
+        android:text="@string/msg22"
         android:textColor="@color/black"
         android:textSize="15sp" />
 
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
-        android:text="Truck manager email"
+        android:text="@string/msg23"
         android:textColor="@color/black"
         android:textSize="15sp" />
 
@@ -62,7 +62,7 @@
         android:layout_height="20dp"
         android:layout_marginTop="20dp"
         android:background="@color/light_green"
-        android:orientation="vertical"></LinearLayout>
+        android:orientation="vertical" />
 
     <TextView
         android:id="@+id/placeNumber"
@@ -70,7 +70,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
-        android:text="Place number"
+        android:text="@string/msg24"
         android:textColor="@color/black"
         android:textSize="15sp" />
 
@@ -80,7 +80,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
-        android:text="Parking manager email"
+        android:text="@string/msg25"
         android:textColor="@color/black"
         android:textSize="15sp" />
 
@@ -89,7 +89,7 @@
         android:layout_height="20dp"
         android:layout_marginTop="20dp"
         android:background="@color/light_green"
-        android:orientation="vertical"></LinearLayout>
+        android:orientation="vertical" />
 
     <TextView
         android:id="@+id/description"
@@ -97,7 +97,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
-        android:text="Description"
+        android:text="@string/msg26"
         android:textColor="@color/black"
         android:textSize="15sp" />
 
@@ -107,7 +107,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
-        android:text="Price"
+        android:text="@string/msg27"
         android:textColor="@color/black"
         android:textSize="15sp" />
 
@@ -116,7 +116,7 @@
         android:layout_height="20dp"
         android:layout_marginTop="20dp"
         android:background="@color/light_green"
-        android:orientation="vertical"></LinearLayout>
+        android:orientation="vertical" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -129,15 +129,15 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-
-            android:text="Signed by parking manager"
+            android:text="@string/msg28"
             android:textColor="@color/black"
             android:textSize="15sp" />
 
         <ImageView
             android:id="@+id/parkStatus"
             android:layout_width="20dp"
-            android:layout_height="20dp" />
+            android:layout_height="20dp"
+            android:contentDescription="@string/msg29" />
 
     </LinearLayout>
 
@@ -152,14 +152,15 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:text="Signed by truck manager"
+            android:text="@string/msg30"
             android:textColor="@color/black"
             android:textSize="15sp" />
 
         <ImageView
             android:id="@+id/truckStatus"
             android:layout_width="20dp"
-            android:layout_height="20dp" />
+            android:layout_height="20dp"
+            android:contentDescription="@string/msg29" />
 
     </LinearLayout>
 
@@ -170,10 +171,10 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="80dp"
         android:backgroundTint="@color/green"
-        android:text="Sign invoice"
+        android:text="@string/msg31"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="18dp" />
+        android:textSize="18sp" />
 
     <Button
         android:id="@+id/exportInvoice"
@@ -182,9 +183,9 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="15dp"
         android:backgroundTint="@color/green"
-        android:text="Export invoice"
+        android:text="@string/msg32"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="18dp" />
+        android:textSize="18sp" />
 
 </LinearLayout>
