--- a/app/src/main/res/layout/activity_invoices_page.xml
+++ b/app/src/main/res/layout/activity_invoices_page.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fontFamily="sans-serif-thin"
-    tools:context=".ui.activity.InvoicesPage">
+    tools:context=".ui.activity.invoice.InvoicesPage">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,6 +35,7 @@
                         android:layout_width="200dp"
                         android:layout_height="50dp"
                         android:background="@color/white"
+                        android:importantForAutofill="no"
                         android:textAlignment="center"
                         android:textColor="@color/black"
                         android:textSize="16sp" />
@@ -51,6 +52,7 @@
                             android:layout_height="30dp"
                             android:background="@color/white"
                             android:clickable="true"
+                            android:contentDescription="@string/msg33"
                             android:scaleType="fitCenter"
                             android:src="@drawable/search" />
 
@@ -60,7 +62,7 @@
                             android:layout_gravity="center_horizontal"
                             android:background="@color/white"
                             android:gravity="center_horizontal"
-                            android:text="Search"
+                            android:text="@string/msg34"
                             android:textColor="@color/black"
                             android:textSize="13sp" />
                     </LinearLayout>
@@ -87,7 +89,7 @@
                             android:layout_gravity="center_horizontal"
                             android:background="@color/white"
                             android:gravity="center_horizontal"
-                            android:text="Reset"
+                            android:text="@string/msg35"
                             android:textColor="@color/black"
                             android:textSize="13sp" />
                     </LinearLayout>
@@ -108,25 +110,25 @@
                 android:id="@+id/all"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="All" />
+                android:text="@string/msg36" />
 
             <com.google.android.material.tabs.TabItem
                 android:id="@+id/notSignedByPark"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Not signed by parking manager" />
+                android:text="@string/msg37" />
 
             <com.google.android.material.tabs.TabItem
                 android:id="@+id/notSignedByTruck"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Not signed by truck manager" />
+                android:text="@string/msg38" />
 
             <com.google.android.material.tabs.TabItem
                 android:id="@+id/signed"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Signed" />
+                android:text="@string/msg39" />
         </com.google.android.material.tabs.TabLayout>
 
 
@@ -150,5 +152,4 @@
             </RelativeLayout>
         </androidx.core.widget.NestedScrollView>
     </LinearLayout>
-
 </FrameLayout>
