--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fontFamily="sans-serif-thin"
-    tools:context=".ui.activity.Profile">
+    tools:context=".ui.activity.profile.Profile">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,7 +20,6 @@
             android:layout_marginTop="60dp"
             android:background="@color/light_green"
             android:orientation="vertical">
-
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -38,18 +37,18 @@
                     android:lines="1"
                     android:text="@string/msg12"
                     android:textColor="@color/black"
-                    android:textSize="20dp"
+                    android:textSize="20sp"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/lastNameText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginStart="10dp"
                     android:lines="1"
                     android:text="@string/msg13"
                     android:textColor="@color/black"
-                    android:textSize="20dp"
+                    android:textSize="20sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -65,7 +64,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
+                android:layout_marginStart="15dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -74,7 +73,7 @@
                     android:lines="1"
                     android:text="@string/msg14"
                     android:textColor="@color/light_grey"
-                    android:textSize="17dp" />
+                    android:textSize="17sp" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/editUserButton"
@@ -90,23 +89,23 @@
                 android:id="@+id/emailText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
+                android:layout_marginStart="25dp"
                 android:layout_marginTop="15dp"
                 android:lines="1"
                 android:text="@string/msg7"
                 android:textColor="@color/black"
-                android:textSize="19dp" />
+                android:textSize="19sp" />
 
             <TextView
                 android:id="@+id/companyText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
+                android:layout_marginStart="25dp"
                 android:layout_marginTop="15dp"
                 android:lines="1"
-                android:text="Company"
+                android:text="@string/msg40"
                 android:textColor="@color/black"
-                android:textSize="19dp" />
+                android:textSize="19sp" />
 
 
         </LinearLayout>
@@ -122,7 +121,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
+                android:layout_marginStart="15dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -131,20 +130,21 @@
                     android:lines="1"
                     android:text="@string/msg15"
                     android:textColor="@color/light_grey"
-                    android:textSize="17dp" />
+                    android:textSize="17sp" />
             </LinearLayout>
 
 
             <TextView
+                android:id="@+id/translate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
+                android:layout_marginStart="25dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="20dp"
                 android:lines="1"
                 android:text="@string/msg16"
                 android:textColor="@color/black"
-                android:textSize="19dp" />
+                android:textSize="19sp" />
 
         </LinearLayout>
 
@@ -159,13 +159,13 @@
                 android:id="@+id/singOut"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
+                android:layout_marginStart="25dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="20dp"
                 android:lines="1"
                 android:text="@string/msg19"
                 android:textColor="@color/red"
-                android:textSize="19dp" />
+                android:textSize="19sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -173,9 +173,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:background="@color/light_green"
-            android:orientation="vertical">
-
-        </LinearLayout>
+            android:orientation="vertical"></LinearLayout>
     </LinearLayout>
-
 </FrameLayout>
