--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:fontFamily="sans-serif-thin"
     android:orientation="vertical"
-    tools:context=".ui.activity.Register">
+    tools:context=".ui.activity.general.Register">
 
     <TextView
         android:id="@+id/textView"
@@ -18,7 +18,7 @@
         android:text="@string/msg1"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:textStyle="bold" />
 
     <com.google.android.material.textfield.TextInputLayout
@@ -43,7 +43,7 @@
             android:lines="3"
             android:textColor="@color/black"
             android:textColorHint="@color/grey"
-            android:textSize="17dp" />
+            android:textSize="17sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -69,7 +69,7 @@
             android:lines="1"
             android:textColor="@color/black"
             android:textColorHint="@color/grey"
-            android:textSize="17dp" />
+            android:textSize="17sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -95,7 +95,7 @@
             android:lines="1"
             android:textColor="@color/black"
             android:textColorHint="@color/grey"
-            android:textSize="17dp" />
+            android:textSize="17sp" />
 
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -126,9 +126,7 @@
             android:maxLength="32"
             android:textColor="@color/black"
             android:textColorHint="@color/grey"
-            android:textSize="17dp" />
-
-
+            android:textSize="17sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
@@ -141,6 +139,5 @@
         android:onClick="register"
         android:text="@string/msg1"
         android:textColor="@color/white"
-        android:textSize="22dp" />
-
+        android:textSize="22sp" />
 </LinearLayout>
