--- a/app/src/main/res/layout/row_invoice.xml
+++ b/app/src/main/res/layout/row_invoice.xml
@@ -36,7 +36,7 @@
                     android:layout_marginStart="25dp"
                     android:layout_marginTop="5dp"
                     android:lines="1"
-                    android:text="Date"
+                    android:text="@string/msg60"
                     android:textColor="@color/black"
                     android:textSize="15sp" />
 
@@ -47,7 +47,7 @@
                     android:layout_marginStart="65dp"
                     android:layout_marginTop="5dp"
                     android:lines="1"
-                    android:text="id"
+                    android:text="@string/msg61"
                     android:textColor="@color/white"
                     android:textSize="11sp" />
             </LinearLayout>
@@ -65,7 +65,7 @@
                     android:layout_marginTop="5dp"
                     android:fontFamily="@font/alata"
                     android:lines="1"
-                    android:text="Price"
+                    android:text="@string/msg62"
                     android:textColor="@color/green"
                     android:textSize="15sp" />
             </LinearLayout>
